--- a/Readme
+++ b/Readme
@@ -1,3 +1,5 @@
 
 Biblioteca Digital:
-Crie um sistema de biblioteca digital com livros, autores e categorias. Os livros pertencem a autores, e cada livro pode ser classificado em uma ou mais categorias. Os usuários podem fazer pesquisas por autor ou categoria e visualizar os livros disponíveis.
+Crie um sistema de biblioteca digital com livros, autores e categorias. 
+Os livros pertencem a autores, e cada livro pode ser classificado em uma ou mais categorias. 
+Os usuários podem fazer pesquisas por autor ou categoria e visualizar os livros disponíveis.
